@@ -2,14 +2,14 @@ Source: netcfg
 Section: debian-installer
 Priority: optional
 Maintainer: Debian Install System Team <debian-boot@lists.debian.org>
-Uploaders: Joey Hess <joeyh@debian.org>, Colin Watson <cjwatson@debian.org>, Christian Perrier <bubulle@debian.org>
+Uploaders: Colin Watson <cjwatson@debian.org>, Christian Perrier <bubulle@debian.org>
 Build-Depends: debhelper (>= 7.4.17), dpkg-dev (>= 1.9.0), libdebconfclient0-dev (>= 0.46), libdebian-installer4-dev (>= 0.41), po-debconf (>= 0.5.0), libiw-dev (>= 27+28pre9) [!s390 !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386]
 Vcs-Svn: svn://svn.debian.org/d-i/trunk/packages/netcfg
 
 Package: netcfg
 XC-Package-Type: udeb
 Architecture: i386 amd64 alpha arm armel armeb hppa ia64 m68k mips mipsel powerpc sparc kfreebsd-i386 kfreebsd-amd64 hurd-i386 sh4
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${netcfg:Depends}, ethernet-card-detection
+Depends: ${shlibs:Depends}, ${misc:Depends}, ethernet-card-detection, isc-dhcp-client-udeb [kfreebsd-any], freebsd-net-tools-udeb [kfreebsd-any]
 Provides: configured-network
 XB-Installer-Menu-Item: 1800
 Description: Configure the network
@@ -22,7 +22,7 @@ Description: Configure the network
 Package: netcfg-static
 XC-Package-Type: udeb
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ethernet-card-detection
+Depends: ${shlibs:Depends}, ${misc:Depends}, ethernet-card-detection, freebsd-net-tools-udeb [kfreebsd-any]
 Provides: configured-network
 XB-Installer-Menu-Item: 1800
 Description: Configure a static network
